# Curvas-OMOG

./: pyproject.toml
curvas_omog/: __init__.py  curve.py  environment.py  settings.py
