[tool.poetry]
name = "curvas-omog"
version = "0.1.0"
description = ""
authors = ["Otávio Almeida <otavioalmeida650@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
pygame = "^2.5.2"
reloadium = "^1.2.1"
pygame-gui = "^0.6.9"
cupy-cuda12x = "^12.2.0"
numpy = ">=1.21,<1.26"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.290"
taskipy = "^1.12.0"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "rapids"
url = "https://pypi.nvidia.com"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 118
show-source = true
include = ["**/*.py", "**/*.pyi", "**/pyproject.toml", "*.ipynb"]
select = [
  "E",    # pycodestyle
  "F",    # pyflakes
  "UP",   # pyupgrade
  "N",    # pep8-naming
  "C90",  # mccabe
  "I",    # isort
  "PERF", # perflint
  "NPY",  # numpy
  "PL",   # pylint
  "RUF",  # ruff
]

[tool.taskipy.tasks]
test = "pytest tests/"
lint = "poetry run lint"
dev = "reloadium run curvas_omog/__init__.py"
