[tool.poetry]
name = "curvas-omog"
version = "0.1.0"
description = ""
authors = ["Otávio Almeida <otavioalmeida650@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
pygame = "^2.5.2"
reloadium = "^1.2.1"
pygame-gui = "^0.6.9"
cupy-cuda12x = "^12.2.0"
numpy = ">=1.21,<1.26"
scipy = "^1.11.3"
screeninfo = "^0.8.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.290"
taskipy = "^1.12.0"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "rapids"
url = "https://pypi.nvidia.com"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 118
show-source = true
include = ["**/*.py", "**/*.pyi", "**/pyproject.toml", "*.ipynb"]
select = [
  "E",    # pycodestyle
  "W",    # pycodestylewarning
  "F",    # pyflakes
  "UP",   # pyupgrade
  "N",    # pep8-naming
  "C90",  # mccabe
  "I",    # isort
  "PERF", # perflint
  "NPY",  # numpy
  "FURB", # refurb
  "LOG",  # log
  "FLY",  # flynt
  "TRY",  # tryceratops 
  "PGH",  # pygrep-hooks
  "PD",   # pandas-vet
  "ERA",  # eradicate 
  "PL",   # pylint
  "RUF",  # ruff
  # "ALL",  # all >:)
  "YTT",  # ruff
  "ASYNC",  # ruff
  "S",  # ruff
  "BLE",  # ruff
  "FBT",  # ruff
  "B",  # ruff
  "A",  # ruff
  "COM",  # ruff
  "CPY",  # ruff
  "C4",  # ruff
  "DTZ",  # ruff
  "T10",  # ruff
  "DJ",  # ruff
  "EM",  # ruff
  "EXE",  # ruff
  "FA",  # ruff
  "ISC",  # ruff
  "ICN",  # ruff
  "G",  # ruff
  "INP",  # ruff
  "PIE",  # ruff
  "T20",  # ruff
  "PYI",  # ruff
  "PT",  # ruff
  "Q",  # ruff
  "RSE",  # ruff
  "RET",  # ruff
  "SLF",  # ruff
  "SLOT",  # ruff
  "SIM",  # ruff
  "TID",  # ruff
  "TCH",  # ruff
  "INT",  # ruff
  "ARG",  # ruff
  "TD",  # ruff
  "FIX",  # ruff
]

[tool.taskipy.tasks]
test = "pytest tests/"
lint = "poetry run lint"
dev = "reloadium run curvas_omog/__init__.py"
